[gd_scene load_steps=5 format=3 uid="uid://jx188rc02x60"]

[ext_resource type="Script" uid="uid://c25is1a0rfa8d" path="res://src/scripts/mining_drone.gd" id="1_qsfdw"]
[ext_resource type="Texture2D" uid="uid://d7jko44kmqr3" path="res://assets/graphics/mining_drone.png" id="2_qsfdw"]
[ext_resource type="AudioStream" uid="uid://bnmx8an5n51oy" path="res://assets/audio/SFX/MINING/Click/MIN_Click_Asteroid_08.ogg" id="3_0pwgq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsfdw"]
size = Vector2(14, 12)

[node name="MiningDrone" type="Node2D"]
script = ExtResource("1_qsfdw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qsfdw")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = -6.0
show_percentage = false

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0pwgq")
bus = &"SFX"

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_qsfdw")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
